--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^2.15.1
   cloud_firestore: ^4.9.1
   firebase_storage: ^11.2.6
+  intl_phone_number_input: ^0.7.3+1
 
 dev_dependencies:
   flutter_test:
