--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_storage: ^11.2.6
   intl_phone_number_input: ^0.7.3+1
   lottie: ^2.6.0
+  flutter_wall_layout: ^2.1.1
 
 dev_dependencies:
   flutter_test:
